examples/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    repo: https://github.com/tolson-vkn/env-echgo
  labels:
    app: env-echgo
  name: env-echgo-cip
  namespace: env-echgo
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: env-echgo
