examples/ingress-anno.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    pifrost.tolson.io/ingress: "true"
  name: env-echgo-ing-anno
  namespace: env-echgo
spec:
  ingressClassName: nginx
  rules:
    - host: env-echgo-anno.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: env-echgo
                port:
                  number: 8080
