examples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: env-echgo-ing-no-anno
  namespace: env-echgo
spec:
  ingressClassName: nginx
  rules:
    - host: env-echgo-two.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: env-echgo
                port:
                  number: 8080
